Setting production & tambah database_url

--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.js",
     "start": "node ./src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Hendri Alqori",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -30,5 +29,8 @@
   "devDependencies": {
     "morgan": "^1.10.0",
     "nodemon": "^2.0.18"
+  },
+  "engines": {
+    "node": "16.16.0"
   }
 }
